# ContextProof-2026

./: .env.example  .gitignore  ENHANCEMENT_REPORT_v1.2.0.md  FINAL_VERIFICATION_v1.4.0.md  FINAL_VERIFICATION_v2.0.0.md  GITHUB_DEPLOYMENT_CHECKLIST.md  INSTRUCTION.md  MANIFEST.in  PRODUCTION_CHECKLIST.md  PRODUCTION_READINESS_REPORT.md  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v2.0.1.md  ROADMAP.md  bandit-report-local.json  pyproject.toml  requirements.txt  Техническое задание CCBM_ Оптимизация LLM.md
.ccbm/skills/: README.md
.ccbm/skills/chernoff-verifier/: SKILL.md
.ccbm/skills/compliance-checker/: SKILL.md
.ccbm/skills/context-compression/: SKILL.md
.ccbm/skills/iin-validator/: SKILL.md
.ccbm/skills/merkle-auditor/: SKILL.md
.ccbm/skills/pii-detector/: SKILL.md
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.prod.yml
docs/: FINAL_VERIFICATION_REPORT.md  LLMLINGUA_GUIDE.md  MCP_SERVER_PLAN.md  PHASE1_REPORT.md  PHASE2_REPORT.md  PHASE3_REPORT.md  PHASE4_REPORT.md  PHASE5X_ENHANCEMENTS.md  PHASE5_REPORT.md  PHASE6_REPORT.md  PHASE7_REPORT.md  PHASE8_REPORT.md  PRODUCTION_DEPLOYMENT.md  QUALITY_GATES.md  SECURITY_AUDIT_REPORT.md  SUPERPOWERS_SETUP.md  USER_JOURNEY_REPORT.md
src/ccbm/: __init__.py  cli.py
src/ccbm/analyzer/: __init__.py  kazroberta_ner.py
src/ccbm/audit/: __init__.py  glass_box.py
src/ccbm/contract/: __init__.py  information_contract.py
src/ccbm/dashboard/: __init__.py  app.py  cli.py
src/ccbm/mcp/: __init__.py  server.py
src/ccbm/metrics/: observability.py
src/ccbm/optimizer/: __init__.py  conflict_logger.py  faithfulness_optimized.py  llmlingua.py  question_aware.py  two_stage.py
src/ccbm/quality/: __init__.py  agentic_metrics.py  cli.py  faithfulness_analyzer.py  golden_set_qa.py
src/ccbm/replay/: __init__.py  context_replay.py
tests/: conftest.py  contract_replay.py  test_analyzer.py  test_audit.py  test_audit_enhanced.py  test_chernoff_verifier.py  test_compression_enhanced.py  test_faithfulness.py  test_glass_box.py  test_golden_set.py  test_kazroberta_ner.py  test_llmlingua.py  test_mcp.py  test_numeric_invariants.py  test_optimizer.py  test_security_audit.py  test_stress_ccbm.py
(+6 files in other folders)
