# CCBM Production Configuration
[project]
name = "ccbm"
version = "2.0.0"
description = "Certified Context Budget Manager — детерминированная оптимизация и математическая верификация контекста LLM"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "sergeeey", email = "sergey@example.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # MCP Protocol
    "mcp>=1.0.0",
    
    # LLM & Tokenization
    "tiktoken>=0.9.0",
    "litellm>=1.50.0",
    
    # Compression
    "llmlingua>=0.2.0",
    
    # NER & NLP (Kazakh support)
    "transformers>=4.40.0",
    "torch>=2.2.0",
    
    # Math & Verification
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.100.0",
    
    # Security
    "bandit>=1.7.5",
    
    # Dashboard
    "streamlit>=1.30.0",
    
    # Production
    "uvicorn>=0.27.0",
    "fastapi>=0.109.0",
    
    # Monitoring
    "prometheus-client>=0.19.0",
    
    # Utils
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
]
ml = [
    "sentence-transformers>=2.2.0",
    "bert-score>=0.3.13",
    "scikit-learn>=1.3.0",
]

[project.scripts]
ccbm = "ccbm.cli:main"
ccbm-dashboard = "ccbm.dashboard.cli:main"
ccbm-security = "ccbm.security.cli:main"
ccbm-quality = "ccbm.quality.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccbm"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
